# evm-sail

./: .gitignore  Makefile  README.md
docs/: spec.tex
evm/: accelerators.sail  block_hash.sail  el_ir.sail  el_kernel.sail  evm.sail  exceptions.sail  gas.sail  instructions.sail  interpreter.sail  memory.sail  prelude.sail  prelude_evm.sail  rlp.sail  runner.sail
evm/evm/: block.sail  execute.sail  gas.sail  instructions.sail  interpreter.sail  machine.sail  transaction.sail
evm/host/: accelerators.sail  crypto.sail  ffi.sail  io.sail  kernel.sail  memory.sail  state.sail
evm/kernel/: gas.sail  instructions.sail  interpreter.sail
evm/lib/: block_hash.sail  hash_builder.sail  io.sail  keccak.sail  mpt.sail  mpt_witness.sail  rlp.sail  rlp_decode.sail  sha256.sail  ssz.sail  ssz_htr.sail  state_root.sail
examples/: blockhash_test.sail  evm_primitives.sail  fixtures.sail  hash_builder_test.sail  keccak_test.sail  precompile_test.sail  rlp_test.sail  run_block.sail  syscall_demo.sail
examples/eest/: REPORT.md  bench.py  run_eest.py  runner.sail  runner_ffi.c  runner_ffi.h
examples/stateless/: run_witness.py  witness_probe.sail
ffi/: acc_shim.c  acc_shim.h  accel_mmio.h  el_map.c  el_map.h  el_mem.c  el_mem.h  host_acctmap.c  host_acctmap.h  host_code.c  host_code.h  host_map.c  host_map.h  host_mem.c  host_mem.h  host_nodedb.c  host_nodedb.h  host_preimage.c  host_preimage.h  host_stack.c  host_stack.h  host_word.c  host_word.h  io_native_stub.c  zkvm_accelerators.c  zkvm_accelerators.h
mapping/: MAPPING.md
revm-eest/: Cargo.toml  bench.py  run_eest.py  runner_ffi.c  runner_ffi.h
revm-eest/src/: main.rs
revm-eest/stateless/: evm_sail_consumer.py  run_witness.py  witness_probe.sail
sail/: el_kernel.sail  evm.sail  execute.sail  hash_builder.sail  keccak.sail  machine.sail  main.sail  mpt.sail  mpt_witness.sail  prelude.sail  prelude_evm.sail  rlp_decode.sail  runner.sail  sha256.sail  ssz.sail  ssz_htr.sail  state_root.sail  transaction.sail
sail/evm/: block.sail  execute.sail  gas.sail  instructions.sail  interpreter.sail  machine.sail  transaction.sail
sail/host/: io.sail  kernel.sail  memory.sail  state.sail
sail/lib/: block_hash.sail  mpt.sail  rlp.sail  ssz_htr.sail
scripts/: fmt-sail.sh  lint-sail.sh
zkvm/: README.md  STATELESS.md  build.sh  el_input.h  gen_vector.py  zkvm_bench.sail  zkvm_block.sail  zkvm_input.h  zkvm_io.h
zkvm/accel-device/: accel_device.cc
zkvm/accel-host/: Cargo.toml
zkvm/accel-host/src/: lib.rs
zkvm/ere-guest/: Cargo.toml  README.md  build.rs  ere_bridge.c
zkvm/ere-guest/src/: main.rs
zkvm/native-runner/: build.sh  main.c  native_io.c  run_fixtures.py
zkvm/runtime/: derisk_main.c  el_input.c  harness.c  htif.c  htif.h  link.ld  runtime.c  start.S  traptest_main.c  zkvm_input.c  (+1 more)
(+33 files in other folders)
